# Befry-Engine

./: CMakeLists.txt  LICENSE  Makefile  README.MD
examples/: test.cpp
include/: befry_engine.h  bg_framework.h  dot.h  game_object.h  main_loop.h  renderer.h  scene.h  types.h
include/befry_engine/: dot.h  event.h  game_object.h  main_loop.h  renderer.h  scene.h  types.h
include/bg_framework/: event.h  renderer.h  scene.h  scene.hpp
include/bg_framework/game_objects/: game_object.h  sprite.h
include/bg_framework/physics_engine/: collision_shape.h  physics.h  physics_body.h  static_body.h
include/bg_framework/types/: texture.h  vector2.h
lib/: dot.cpp  event.cpp  main_loop.cpp  renderer.cpp  scene.cpp  sprite.cpp  texture.cpp  types.cpp  vector2.cpp
lib/game_objects/: game_object.cpp  sprite.cpp
lib/physics_engine/: collision_shape.cpp  physics.cpp  physics_body.cpp  static_body.cpp
lib/types/: texture.cpp
tests/: test.cpp
